NetworkPolicies/allowallegress.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: test
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
