NetworkPolicies/allowallingress.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: test
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
